--- a/V8下载编译.md
+++ b/V8下载编译.md
@@ -63,7 +63,7 @@ ninja -C ./out.gn/x64.debug/
 编译release版本的话，最后两行改成这个。
 
 ```
-tools/dev/v8gen.py x64.release
+./tools/dev/v8gen.py x64.release
 ninja -C out.gn/x64.release
 ```
 
