--- a/V8基础知识.md
+++ b/V8基础知识.md
@@ -61,11 +61,11 @@ var str4 = new String(null);
 
 四个字符串在内存中的表示如下：
 
-![image-20210521103449778](C:\Users\Hide\AppData\Roaming\Typora\typora-user-images\image-20210521103449778.png)
+![image](https://cdn.nlark.com/yuque/0/2021/png/13010201/1621567497989-777923fa-a9fd-44f8-8784-58df6d34d4d2.png)
 
 可以看到，JavaScript中的字符串也是个对象，其数据保存在value属性中。两个相同的字符串只会在内存中保存一次，保存的地方看起来是在堆栈上面，然后两个字符串对象的value指针指向同一个地址处。如果是null字符串，其value指针会指向跟elements指针相近的地方，看起来它们可能都是程序中定义的一个泛用型数据。字符串的value属性内存表示如下：
 
-![image-20210521103604207](C:\Users\Hide\AppData\Roaming\Typora\typora-user-images\image-20210521103604207.png)
+![image](C:\Users\Hide\AppData\Roaming\Typora\typora-user-images\image-20210521103604207.png)
 
 第三个地址单元处以SMI类型存储了字符串长度，第四个地址单元开始就是字符串的数据，第一个地址单元打印出来可以看到是个Map，第二个地址单元只占用了低32位，是个不知名数据。
 
