--- a/V8下载编译.md
+++ b/V8下载编译.md
@@ -87,3 +87,19 @@ ninja -C out.gn/x64.release
 # 运行test.js
 ```
 
+## 0x04 turbolizer
+TurboFan是 v8 的优化编译器之一，它使用了 sea of nodes 这个编译器概念。
+
+sea of nodes 不是单纯的指某个图的结点，它是一种特殊中间表示的图。
+
+TurboFan的相关源码位于v8/compiler文件夹下。
+```
+cd v8/tools/turbolizer
+# 获取依赖项
+npm i
+# 构建
+npm run-script build
+# 直接在turbolizer文件夹下启动静态http服务
+python -m SimpleHTTPServer
+```
+https://kiprey.github.io/2021/01/v8-turboFan/
