--- a/V8基础知识.md
+++ b/V8基础知识.md
@@ -187,3 +187,8 @@ gdb-peda$ x/10gx 0x00000398ee78a128
 
 ```
 可以看到，对于Set这种非字典型对象来说，此时其properties属性是一个保存在第二个地址单元处的指针，我们定义的这些properties都会放置在这个指针指向的地址处。在该处地址，第一个地址单元存放Map，第二个地址单元存放properties数量，第三个地址单元开始存放properties，SMI直接存放，Double和对象存放的是地址。
+
+## 编译器（TurboFan）与解释器（Ignition）
+编译型语言：在程序执行前，需经过编译器编译，并且编译之后会直接保留机器能读懂的二进制文件；以后每次运行程序时，直接运行二进制文件，不需要重新编译。
+
+解释型语言：在每次运行时都要经过解释器对程序进行动态解释和执行。
